updated stored models and endpoint

--- a/disease_symptom_prediction_dataset.ipynb
+++ b/disease_symptom_prediction_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,27 +110,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4923</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>(vertigo) Paroymsal  Positional Vertigo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4924</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...</td>\n",
        "      <td>Acne</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4925</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Urinary tract infection</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4926</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, ...</td>\n",
        "      <td>Psoriasis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4927</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...</td>\n",
        "      <td>Impetigo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -146,11 +146,11 @@
        "3     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "4     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "...                                                 ...   \n",
-       "4923  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4924  [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4925  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4926  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4927  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4923  [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4924  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...   \n",
+       "4925  [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4926  [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, ...   \n",
+       "4927  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...   \n",
        "\n",
        "                                            1  \n",
        "0                                     Healthy  \n",
@@ -168,7 +168,7 @@
        "[4928 rows x 2 columns]"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
      "output_type": "stream",
      "text": [
       "Training error rate: 0.0      \n",
-      "Validation error rate: 0.003687768899815591\n"
+      "Validation error rate: 0.0\n"
      ]
     }
    ],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -331,12 +331,12 @@
       "Performing iteration 7\n",
       "Performing iteration 8\n",
       "Performing iteration 9\n",
-      "LogReg Training Error: 6.058770069675701e-07\n",
-      "LogReg Testing Error: 1.2292562999385303e-06\n",
+      "LogReg Training Error: 0.0\n",
+      "LogReg Testing Error: 0.0\n",
       "\n",
       "\n",
       "DecTree Training Error: 0.0\n",
-      "DecTree Testing Error: 3.687768899815591e-06\n",
+      "DecTree Testing Error: 0.0\n",
       "\n",
       "\n",
       "RanFor Training Error: 0.0\n",
@@ -378,13 +378,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf8bb0d533174f92ab3efb661e85f0ac",
+       "model_id": "33df0323c6e64df0a21d729d39cb974a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -440,38 +440,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression: Diabetes\n",
-      "Diabetes is a disease that occurs when your blood glucose, also called blood sugar, is too high. Blood glucose is your main source of energy and comes from the food you eat. Insulin, a hormone made by the pancreas, helps glucose from food get into your cells to be used for energy.\n",
+      "LogisticRegression: Healthy\n",
+      "No illness detected\n",
       "Precautions to take:\n",
-      "\t- have balanced diet\n",
-      "\t- exercise\n",
-      "\t- consult doctor\n",
-      "\t- follow up\n",
+      "\t- No action needed\n",
       "\n",
       "\n",
-      "DecisionTreeClassifier: Diabetes\n",
-      "Diabetes is a disease that occurs when your blood glucose, also called blood sugar, is too high. Blood glucose is your main source of energy and comes from the food you eat. Insulin, a hormone made by the pancreas, helps glucose from food get into your cells to be used for energy.\n",
+      "DecisionTreeClassifier: Healthy\n",
+      "No illness detected\n",
       "Precautions to take:\n",
-      "\t- have balanced diet\n",
-      "\t- exercise\n",
-      "\t- consult doctor\n",
-      "\t- follow up\n",
+      "\t- No action needed\n",
       "\n",
       "\n",
-      "RandomForestClassifier: Diabetes\n",
-      "Diabetes is a disease that occurs when your blood glucose, also called blood sugar, is too high. Blood glucose is your main source of energy and comes from the food you eat. Insulin, a hormone made by the pancreas, helps glucose from food get into your cells to be used for energy.\n",
+      "RandomForestClassifier: Healthy\n",
+      "No illness detected\n",
       "Precautions to take:\n",
-      "\t- have balanced diet\n",
-      "\t- exercise\n",
-      "\t- consult doctor\n",
-      "\t- follow up\n",
+      "\t- No action needed\n",
       "\n",
       "\n"
      ]
@@ -499,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +568,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"models\", \"convert_symptom_to_id.pkl\"), \"wb+\") as file:\n",
+    "    pickle.dump(indexer, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
