model working, text generation not as unable to import model correctly because model is too big

--- a/alternate.ipynb
+++ b/alternate.ipynb
@@ -36,7 +36,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 875
+          "height": 597
         },
         "id": "nGtJU1e2TFS0",
         "outputId": "af1d87b2-83e9-44b6-efa0-810487c899e4"
@@ -498,7 +498,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 875
+          "height": 597
         },
         "id": "XImYPG50TFS1",
         "outputId": "04fd5025-81aa-4ec3-a59c-412dbf49c75f"
@@ -956,7 +956,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 857
+          "height": 597
         },
         "id": "8iuV2AV5TFS1",
         "outputId": "8abb2b06-87a5-4d21-a227-c7487b4b8ec7"
@@ -1419,7 +1419,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 857
+          "height": 597
         },
         "id": "sgwPZHfFTFS2",
         "outputId": "bb1728b8-bc54-4905-e7ac-0e96a1f7a72f"
@@ -1929,7 +1929,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 788
+          "height": 597
         },
         "id": "wWvL1p_kTFS3",
         "outputId": "2985f05d-6f1e-4fcb-85ef-2ae5683cb34c"
@@ -2389,7 +2389,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 788
+          "height": 597
         },
         "id": "VoeffcT5TFS3",
         "outputId": "6a0c11a4-093f-44dd-955d-11db07cd50e2"
@@ -3163,7 +3163,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 889
+          "height": 854
         },
         "id": "kuo6zrfBFA-I",
         "outputId": "bbfe5220-f067-4127-cc27-45fc3c85876d"
@@ -3319,10 +3319,10 @@
       ],
       "metadata": {
         "id": "HRUgajeo6RMC",
-        "outputId": "acb1bf12-db01-4668-90fd-b2ce775a6374",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "acb1bf12-db01-4668-90fd-b2ce775a6374"
       },
       "execution_count": 67,
       "outputs": [
@@ -3350,12 +3350,12 @@
         "shutil.make_archive('distilbert_model', 'zip', 'distilbert_model')"
       ],
       "metadata": {
-        "id": "A_OgDT1LSMC-",
-        "outputId": "933f8796-dc73-4214-a00a-2cfc32ec2bdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "A_OgDT1LSMC-",
+        "outputId": "933f8796-dc73-4214-a00a-2cfc32ec2bdd"
       },
       "execution_count": 68,
       "outputs": [
@@ -3382,12 +3382,12 @@
         "files.download('distilbert_model.zip')"
       ],
       "metadata": {
-        "id": "OwuTyGdRU_n1",
-        "outputId": "eac498c1-ef67-4b53-8912-c8676a763882",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "height": 17
+        },
+        "id": "OwuTyGdRU_n1",
+        "outputId": "eac498c1-ef67-4b53-8912-c8676a763882"
       },
       "execution_count": 69,
       "outputs": [
@@ -3454,6 +3454,140 @@
             ]
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.eval()"
+      ],
+      "metadata": {
+        "id": "8pZo13K2ltV2",
+        "outputId": "911f35c9-68b1-412d-b1b5-d67995d2b1b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DistilBertForSequenceClassification(\n",
+              "  (distilbert): DistilBertModel(\n",
+              "    (embeddings): Embeddings(\n",
+              "      (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
+              "      (position_embeddings): Embedding(512, 768)\n",
+              "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+              "      (dropout): Dropout(p=0.1, inplace=False)\n",
+              "    )\n",
+              "    (transformer): Transformer(\n",
+              "      (layer): ModuleList(\n",
+              "        (0-5): 6 x TransformerBlock(\n",
+              "          (attention): MultiHeadSelfAttention(\n",
+              "            (dropout): Dropout(p=0.1, inplace=False)\n",
+              "            (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+              "          )\n",
+              "          (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+              "          (ffn): FFN(\n",
+              "            (dropout): Dropout(p=0.1, inplace=False)\n",
+              "            (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+              "            (activation): GELUActivation()\n",
+              "          )\n",
+              "          (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+              "        )\n",
+              "      )\n",
+              "    )\n",
+              "  )\n",
+              "  (pre_classifier): Linear(in_features=768, out_features=768, bias=True)\n",
+              "  (classifier): Linear(in_features=768, out_features=2, bias=True)\n",
+              "  (dropout): Dropout(p=0.2, inplace=False)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset"
+      ],
+      "metadata": {
+        "id": "hKfbFh76uwow",
+        "outputId": "6351873c-6f53-43df-d379-cbe1c37f1019",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.CustomDataset at 0x7ed5b07d1f90>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import DistilBertTokenizer, DistilBertModel\n",
+        "import torch\n",
+        "\n",
+        "# Load DistilBERT tokenizer and model\n",
+        "\n",
+        "# IDEALLY Can use distilbert_model/tokenizer.json and distilbert_model/model.safetensors respecitvely\n",
+        "# Those are my create models along with appropriate tokenization, can not perform on collab on some reason\n",
+        "# If we can find a way to use those models and load them again ( i have uploaded the file on telegram) theb\n",
+        "# This program would generate related/similar text.\n",
+        "\n",
+        "tokenizer = DistilBertTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
+        "distilbert_model = DistilBertModel.from_pretrained(\"distilbert-base-uncased\")\n",
+        "\n",
+        "# Example input text\n",
+        "input_text = \"Disease Health Diagnose Cough Fever\"\n",
+        "\n",
+        "# Tokenize and encode the input text\n",
+        "input_ids = tokenizer.encode(input_text, return_tensors=\"pt\")\n",
+        "\n",
+        "# Forward pass through DistilBERT to obtain contextual embeddings\n",
+        "with torch.no_grad():\n",
+        "    embeddings = distilbert_model(input_ids).last_hidden_state\n",
+        "\n",
+        "# Auto-regressive decoding (replace this with a more advanced generation strategy)\n",
+        "generated_text = \" \".join(tokenizer.decode(token.item()) for token in input_ids[0])\n",
+        "\n",
+        "print(\"Generated Text:\", generated_text)"
+      ],
+      "metadata": {
+        "id": "L5GQF90etAJL",
+        "outputId": "73ceb80c-b808-4977-fc33-0fa949fcf3b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Generated Text: [ C L S ] d i s e a s e h e a l t h d i a # # g n o # # s e c o u g h f e v e r [ S E P ]\n"
+          ]
         }
       ]
     }
