--- a/disease_symptom_prediction_dataset.ipynb
+++ b/disease_symptom_prediction_dataset.ipynb
@@ -110,27 +110,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4923</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>(vertigo) Paroymsal  Positional Vertigo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4924</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Acne</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4925</th>\n",
-       "      <td>[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Urinary tract infection</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4926</th>\n",
-       "      <td>[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Psoriasis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4927</th>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Impetigo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -146,11 +146,11 @@
        "3     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "4     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "...                                                 ...   \n",
-       "4923  [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4924  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...   \n",
-       "4925  [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4926  [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, ...   \n",
-       "4927  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, ...   \n",
+       "4923  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4924  [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4925  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4926  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4927  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "\n",
        "                                            1  \n",
        "0                                     Healthy  \n",
@@ -221,16 +221,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Separates data into features X and targets Y\n",
     "X = list(learning_data[:, 0])\n",
     "Y = list(learning_data[:, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creates a training and testing split\n",
     "from sklearn.model_selection import train_test_split\n",
     "Xtrain, Xtest, Ytrain, Ytest = train_test_split(X, Y, test_size=0.33)"
    ]
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -261,6 +263,7 @@
     }
    ],
    "source": [
+    "# Train a logistic regression\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import zero_one_loss\n",
     "\n",
@@ -271,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -284,6 +287,7 @@
     }
    ],
    "source": [
+    "# Train a decision tree\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "decisiontree_classifier = DecisionTreeClassifier().fit(Xtrain, Ytrain)\n",
     "print(f\"Training error rate: {zero_one_loss(Ytrain, decisiontree_classifier.predict(Xtrain))}\\\n",
@@ -292,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +309,7 @@
     }
    ],
    "source": [
+    "# Train a random forest\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "randomforest_classifier = RandomForestClassifier().fit(Xtrain, Ytrain)\n",
@@ -314,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -332,11 +337,11 @@
       "Performing iteration 8\n",
       "Performing iteration 9\n",
       "LogReg Training Error: 0.0\n",
-      "LogReg Testing Error: 0.0\n",
+      "LogReg Testing Error: 1.2292562999385303e-06\n",
       "\n",
       "\n",
       "DecTree Training Error: 0.0\n",
-      "DecTree Testing Error: 0.0\n",
+      "DecTree Testing Error: 7.375537799631182e-06\n",
       "\n",
       "\n",
       "RanFor Training Error: 0.0\n",
@@ -384,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33df0323c6e64df0a21d729d39cb974a",
+       "model_id": "ce050976ae0140c4937b51e8c367c99a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,6 +474,7 @@
     }
    ],
    "source": [
+    "# Classify illness based on the options selected in the above checkbox\n",
     "for classifier in [logistic_classifier, decisiontree_classifier, randomforest_classifier]:\n",
     "    pred = unique_int_to_illness[classifier.predict([input_symptoms])[0]]\n",
     "    print(f\"{type(classifier).__name__}: {pred}\")\n",
